# Neural-Action-Index

./: README.md  pyproject.toml
.github/workflows/: ci.yml
backend/api/: app.py
backend/core/: errors.py
backend/core/graph/: service.py
backend/core/indexer/: __init__.py  catalog.py  loader.py
backend/core/resolver/: __init__.py  service.py
backend/core/schema/: __init__.py  models.py
backend/core/search/: __init__.py  hybrid.py  interfaces.py  lexical.py  regression.py  service.py  vector.py
docs/: V1.md  V2.md  V3.md  V4.md  plan_developpement_v1_v4.md
docs/contracts/: api.contract.json  api.contract.v0.md  resource.schema.json  resource.schema.v0.json
docs/metrics/: adoption-metrics.md
docs/onboarding/: team-onboarding-30min.md
docs/product/: mvp-v0.md  resource-authoring-conventions.md  vscode-extension-mvp.md
frontend/: app.js  index.html  styles.css
resources/code/: csv_extract_fields.py
resources/configs/: log_rotation_default.yaml
resources/demo_vault/index/: demo.design.system.029.yml  (+59 more)
resources/docs/: csv_extract.md  log_rotation_policy.md
resources/index/: action.data.csv.clean.yml  code.csv.extract_fields.yml  config.system.logs.default.yml  docs.data.csv.extract.yml  docs.system.logs.rotation_policy.yml  system.logs.rotate.yml
resources/scripts/: clean_csv.sh  rotate_logs.sh
resources/templates/: resource.add.template.yaml
tests/integration/: test_api_smoke.py  test_index_integrity.py
tests/unit/: test_api_mvp.py  test_catalog.py  test_search.py  test_static_validation.py
tools/metrics/: compute_adoption_metrics.py
(+60 files in other folders)
