[project]
name = "nai"
version = "0.1.0"
description = "Neural Action Index - moteur neuronal d'accès à un annuaire explicite"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "rank-bm25>=0.2.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]
vector = [
  "sentence-transformers>=3.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
